@@ -2,8 +2,12 @@ Changelog for JVCL 3.0
 ======================
 2004-08-09
 - JvWStrUtils.pas moved to JCL as JclWideStrings.pas // (rom)
+- JvParameterList improvements // jfudickar
 2004-08-06
 - The JvUrlGrabbers now have a Port property and more events that can be triggered. // obones
+2004-08-01
+- JvAppStorage and JvFormPlacement enhanced for usage of IJvAppStorageHandler, 
+  now unpublished Form properties can be stored by JvFormPlacement  //jfudickar
 2004-07-27
 - run/JvZlibMultiple.pas: Added support for selective extraction and listing archive contents without 
   writing any files to disk. Parameters added to OnDecompressingFile and OnDecompressedFile events. // WPOstma 
